# python-calculator

./: README.md  calculator.py  pyproject.toml  requirements.txt  test_calculator.py
.github/workflows/: dynamic-matrix.yml  manual-deploy.yml  test.yml  weekly-maintenance.yml
